--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -64,6 +64,24 @@ body {
   padding-right: 0px;
 }
 
+.clents-text .span-clients {
+  margin: 0 0 0px;
+  letter-spacing: 0px;
+  color: #7C7C7C;
+  font-family: "Poppins", sans-serif;
+  font-size: 0.8em;
+  line-height: 0.5;
+  
+}
+.span-margin {
+  margin-top: 5px;
+}
+
+.section-sm .title-about h3{
+  font-weight: 400;
+}
+
+
 
 * {
   -webkit-box-sizing: border-box;
@@ -84,7 +102,7 @@ body {
 }
 
 .whom {
-  margin-bottom: -50px;
+  margin-bottom: 0px;
 
 }
 
@@ -231,7 +249,7 @@ body {
 
 .col-spacing-20 div[class^="col-"]:not(.row) {
   margin-bottom: 20px;
-  padding: 0 10px;
+  padding: 0 30px;
 }
 
 .col-spacing-10 {
@@ -1258,8 +1276,8 @@ img.img-circle-sm {
 
 img.img-circle-md {
   min-width: 100px;
-  width: 100px;
-  height: 100px;
+  width: 160px;
+  height: 160px;
 }
 
 img.img-circle-lg {
@@ -6283,11 +6301,8 @@ div[class^='bg-dark'] .owl-carousel .owl-dots .owl-dot:hover:after, div[class^='
 }
 
 .team-wrapper .team-box .team-img img {
-  -webkit-transform: scale(1);
-  transform: scale(1);
   width: 100%;
-  -webkit-transition: transform 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
-  transition: transform 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+
 }
 
 .team-wrapper .team-box .team-img div {
@@ -6299,8 +6314,7 @@ div[class^='bg-dark'] .owl-carousel .owl-dots .owl-dot:hover:after, div[class^='
   width: 100%;
   height: 100%;
   text-align: center;
-  -webkit-transition: ease-out 0.12s;
-  transition: ease-out 0.12s;
+
 }
 
 .team-wrapper .team-box .team-img div ul {
@@ -6309,12 +6323,8 @@ div[class^='bg-dark'] .owl-carousel .owl-dots .owl-dot:hover:after, div[class^='
   top: 50%;
   right: 0;
   left: 0;
-  -webkit-transform: translateY(-50%) scale(0.96);
-  transform: translateY(-50%) scale(0.96);
   margin: 0 -7px;
   padding: 0 30px;
-  -webkit-transition: ease-out 0.12s;
-  transition: ease-out 0.12s;
 }
 
 .team-wrapper .team-box .team-img div ul li {
@@ -6331,10 +6341,7 @@ div[class^='bg-dark'] .owl-carousel .owl-dots .owl-dot:hover:after, div[class^='
 }
 
 .team-wrapper .team-box .team-img:hover img {
-  -webkit-transform: scale(1.04);
-  transform: scale(1.04);
-  -webkit-filter: blur(1.5px);
-  filter: blur(1.5px);
+  filter: blur(0px);
 }
 
 .team-wrapper .team-box .team-img:hover div {
@@ -6351,7 +6358,7 @@ div[class^='bg-dark'] .owl-carousel .owl-dots .owl-dot:hover:after, div[class^='
 }
 
 .team-wrapper .team-box span {
-  color: #AAAAAA;
+  color: #7C7C7C;
 }
 
 .team-wrapper.team-box-hover-2 .team-box .team-img div {
@@ -6470,8 +6477,8 @@ div[class^='bg-dark'] .owl-carousel .owl-dots .owl-dot:hover:after, div[class^='
   width: 160px;
   height: 160px;
   border-radius: 50%;
-  -webkit-box-shadow: 0 0 36px 0 rgba(22, 25, 28, 0.17);
-  box-shadow: 0 0 36px 0 rgba(22, 25, 28, 0.17);
+  -webkit-box-shadow: 0 0 20px 0 rgba(22, 25, 28, 0.1);
+  box-shadow: 0 0 20px 0 rgba(22, 25, 28, 0.1);
 }
 
 .testimonial-grid .testimonial-grid-box .testimonial-content {
@@ -6480,7 +6487,7 @@ div[class^='bg-dark'] .owl-carousel .owl-dots .owl-dot:hover:after, div[class^='
 
 @media (max-width: 991.98px) {
   .testimonial-grid .testimonial-grid-box {
-    width: 50%;
+    width: 100%;
   }
 }
 
@@ -6489,6 +6496,12 @@ div[class^='bg-dark'] .owl-carousel .owl-dots .owl-dot:hover:after, div[class^='
     width: 100%;
     padding: 30px 0;
   }
+  .testimonial-grid .testimonial-grid-box .testimonial-img {
+    float: left;
+    margin-left: 20px;
+    margin-right: 30px;
+  }
+
 }
 
 .testimonial-grid.border-style-solid {
@@ -9925,7 +9938,7 @@ body.loaded:after {
 }
 
 .font-family-primary {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .font-family-secondary, .font-family-playfair {
